2002-07-17  Joel Mayes <bluebird@optushome.com.au>

        Added optional_depends to musixlyr musixps musixpss musixser musixtex

2002-07-17  Joel Mayes <bluebird@optushome.com.au>

        Version bumped to T108

2002-06-17  Joel Mayes <bluebird@optushome.com.au>

        MD5 field to DETAILS

