@@ -8,6 +8,7 @@
     prepare_install                                 &&
 
     cp  -r  musixflx  /usr/bin                      &&
+    cp  -r  $SCRIPT_DIRECTORY/musixtex  /usr/bin    &&
     cp  -r  mf        $TEXMF/fonts/source/musixtex  &&
     cp  -r  tfm       $TEXMF/fonts/tfm/musixtex     &&
     cp  -r  tex       $TEXMF/tex/generic/musixtex   &&
