@@ -1,6 +1,7 @@
 2002-07-17  Joel Mayes <bluebird@optushome.com.au>
 
         Added optional_depends to musixlyr musixps musixpss musixser musixtex
+        Added my own musixtex.sh script to the spell :)
 
 2002-07-17  Joel Mayes <bluebird@optushome.com.au>
 
